Changed restTemplate to WebClient. Closes #39.